# mumble

./: .gitmodules  CMakeLists.txt  README.md
.github/actions/install-dependencies/: common.sh  install_ubuntu_shared_x86_64.sh  install_ubuntu_static_x86_64.sh  install_windows_shared_x86_64.sh  install_windows_static_x86_64.sh  main.sh
.github/actions/install-dependencies/patches/: mdnsresponder-winres.patch
.github/actions/setup-windows-installer-tooling/: action.yml
.github/actions/setup-windows-optional-runtimes/: action.yml
.github/actions/sign-binaries/: action.yml
.github/workflows/: backport.yml  build.sh  build.yml  check_commit_style.py  ci.yml  code-ql.yml  friend-build.yml  issue-maintenance.yml  mumble-forked.yml  pr-checks.yml  release.yml  set_environment_variables.sh  update_submodules_with_retry.sh  windows-client.yml  windows-shared-client.yml
auxiliary_files/: mumble-server.ini
cmake/FindModules/: FindONNXRuntime.cmake
docs/: chat-architecture.md  rich-chat-server.md  screen-sharing-architecture.md  screen-sharing-implementation-plan.md  screen-sharing-relay-deployment.md  theme-color-audit.md  windows-builds.md
docs/dev/: WindowsCrashDumpFlow.md
docs/dev/build-instructions/: build_installer.md
installer/: ClientInstaller.cs  MumbleInstall.cs
relay-webapp/: README.md  index.html  relay-app.js  styles.css
scripts/: run-local-ci.sh
scripts/windows/: assert-windows-build-artifacts.ps1  build-local-windows-client.ps1  collect-mumble-dump.ps1  publish-windows-build-environment.ps1  stage-windows-client-payload.ps1
src/: ACL.cpp  ACL.h  CMakeLists.txt  Logger.cpp  Logger.h  Mumble.proto  MumbleProtocol.cpp  MumbleProtocol.h  SSL.cpp  ScreenShare.cpp  ScreenShare.h  ScreenShareIPC.cpp  ScreenShareIPC.h  ServerResolver.cpp
src/benchmarks/: CMakeLists.txt
src/benchmarks/AudioReceiverBuffer/: AudioReceiverBuffer_benchmark.cpp
src/benchmarks/SpeechCleanup/: CMakeLists.txt  speech_cleanup_benchmark.cpp
src/benchmarks/protocol/: protocol_benchmark.cpp
src/mumble/: AudioConfigDialog.cpp  AudioConfigDialog.h  AudioInput.cpp  AudioInput.h  AudioInput.ui  AudioOutput.ui  AudioOutputSpeech.cpp  AudioOutputSpeech.h  BanEditor.cpp  CMakeLists.txt  Cert.cpp  Cert.ui  ChatPerfTrace.h  ClientUser.cpp  ClientUser.h  ConfigDialog.cpp  ConfigDialog.h  ConnectDialog.cpp  CrashReporter.cpp  CrashReporter.h  CustomElements.cpp  CustomElements.h  DTLNSpeechCleanup.cpp  DTLNSpeechCleanup.h  Database.cpp  Database.h  DeepFilterNetSpeechCleanup.cpp  DeepFilterNetSpeechCleanup.h  EchoCancelOption.cpp  EchoCancelOption.h  EnumStringConversions.cpp  EnumStringConversions.h  Global.cpp  Global.h  GlobalShortcut.ui  JSONSerialization.cpp  ListenerVolumeSlider.cpp  ListenerVolumeSlider.h  Log.cpp  LookConfig.cpp  (+80 more)
src/mumble/deepfilternet/: README.md
src/mumble/dtln/: README.md
src/mumble/dtln/norm_40h/: model_1.onnx  model_2.onnx
src/mumble/dtln/norm_500h/: model_1.onnx  model_2.onnx
src/mumble/modern-shell/: app.js  index.html  styles.css
src/mumble/widgets/: FailedConnectionDialog.cpp  FailedConnectionDialog.h  FailedConnectionDialog.ui  PersistentChatListWidget.cpp  PersistentChatListWidget.h  PersistentChatMessageGroupWidget.cpp  PersistentChatMessageGroupWidget.h  ResponsiveImageDialog.cpp  ResponsiveImageDialog.h
src/murmur/: CMakeLists.txt  DBWrapper.cpp  DBWrapper.h  Messages.cpp  Meta.cpp  Meta.h  MumbleServer.ice  Register.cpp  Server.cpp  Server.h  ServerUserInfo.h
src/murmur/database/: CMakeLists.txt  ChatAssetTable.cpp  ChatAssetTable.h  ChatDataTypes.h  ChatMessageAttachmentTable.cpp  ChatMessageAttachmentTable.h  ChatMessageEmbedTable.cpp  ChatMessageEmbedTable.h  ChatMessageReactionTable.cpp  ChatMessageReactionTable.h  ChatMessageTable.cpp  ChatMessageTable.h  ChatReadStateTable.cpp  ChatReadStateTable.h  ChatThreadTable.cpp  ChatThreadTable.h  DBChatAsset.h  DBChatMessage.cpp  DBChatMessage.h  DBChatMessageAttachment.h  DBChatMessageEmbed.h  DBChatMessageReaction.cpp  DBChatMessageReaction.h  DBChatReadState.cpp  DBChatReadState.h  DBChatThread.cpp  DBChatThread.h  DBTextChannel.cpp  DBTextChannel.h  ServerDatabase.cpp  ServerDatabase.h  TextChannelTable.cpp  TextChannelTable.h
src/screen-helper/: CMakeLists.txt  ScreenShareExternalProcess.cpp  ScreenShareExternalProcess.h  ScreenShareHelperServer.cpp  ScreenShareHelperServer.h  ScreenShareMediaSupport.cpp  ScreenShareMediaSupport.h  ScreenShareRelayClient.cpp  ScreenShareRelayClient.h  ScreenShareSessionPlanner.cpp  ScreenShareSessionPlanner.h  main.cpp
src/tests/: CMakeLists.txt
src/tests/TestDatabase/server/: CMakeLists.txt  ServerDatabaseTest.cpp
src/tests/TestDatabase/server/table_data/: chat_asset_table_input.json  chat_asset_table_migrated.json  chat_message_attachment_table_input.json  chat_message_attachment_table_migrated.json  chat_message_embed_table_input.json  chat_message_embed_table_migrated.json  chat_message_reaction_table_input.json  chat_message_reaction_table_migrated.json  chat_message_table_input.json  chat_message_table_migrated.json  chat_read_state_table_input.json  chat_read_state_table_migrated.json  (+4 more)
src/tests/TestModernShellMenuSerializer/: CMakeLists.txt  TestModernShellMenuSerializer.cpp
src/tests/TestMumbleProtocol/: TestMumbleProtocol.cpp
src/tests/TestPersistentChatController/: CMakeLists.txt  TestPersistentChatController.cpp
src/tests/TestPersistentChatHistoryModel/: CMakeLists.txt  TestPersistentChatHistoryModel.cpp
src/tests/TestPersistentChatRender/: CMakeLists.txt  TestPersistentChatRender.cpp
src/tests/TestScreenShare/: CMakeLists.txt  TestScreenShare.cpp
src/tests/TestServerResolver/: TestServerResolver.cpp
src/tests/TestSettingsJSONSerialization/: CMakeLists.txt  generate_test_case.py
src/tests/TestUserModelNavigator/: CMakeLists.txt  TestUserModelNavigator.cpp
themes/: CatppuccinTheme.qrc  DefaultTheme.qrc
themes/Catppuccin/: Mocha.qss  theme.ini
themes/Default/: Dark.qss  Lite.qss  OSX Dark.qss  OSX Lite.qss
themes/Default/source/Imports/: Base Theme.scss  Dark Definitions.scss  Lite Definitions.scss
